# Effective_AI_2025

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml  msvc.yml
example/: main.cpp
include/ttie/: ttie.h
tests/: test_main.cpp
